added address validation

--- a/app/templates/addemp.html
+++ b/app/templates/addemp.html
@@ -10,24 +10,9 @@
             <div>First name: {{ form.first_name(size=40) }} </div>
 			<div>Last Name: {{ form.last_name(size=40) }} </div>
 			<div>Address: {{ form.address(size=80) }} </div>
+			<div>Method of transport: {{form.mode(size=1) }} </div>
         </p>
         <p><input type="submit" value="Enter"></p>
 		<p>{{ msg }} </p>
-		<p>
-		{% for d in dist %}
-		<div>
-		{{ d.fname }} {{ d.lname }}: {{ d.di.destination_addresses }}
-			{% for e in d.di.rows %}
-				{% for n in e.elements %}
-				<div>
-					{{ n }}
-					<!-- Distance: {{ n.distance.text }}, travel time: {{ n.duration.text }} -->
-				</div>
-				{% endfor %}
-			{% endfor %}
-			<div>--<div>
-		{% endfor %}
-		</div>
-		</p>
     </form>
 {% endblock %}
